# devin-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
src/devin_cli/: cli.py  config.py
src/devin_cli/api/: attachments.py  client.py  knowledge.py  playbooks.py  secrets.py  sessions.py
tests/: test_cli.py  test_config.py
tests/test_api/: test_attachments.py  test_knowledge.py  test_playbooks.py  test_secrets.py  test_sessions.py
