[project]
name = "devin-cli"
version = "0.0.5"
description = "Unofficial CLI for Devin AI - The first AI Software Engineer"
readme = "README.md"
authors = [
    { name = "revanth", email = "revanth@example.com" },
]
license = "MIT"
keywords = ["devin", "ai", "agent", "software-engineer", "autonomous", "cli", "terminal", "cognition", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.9.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "respx>=0.20.0",
    "pytest-cov>=4.0.0",
    "build",
    "twine",
]

[project.scripts]
devin = "devin_cli.cli:app"

[project.urls]
Homepage = "https://github.com/revanthpobala/devin-cli"
Repository = "https://github.com/revanthpobala/devin-cli.git"
Issues = "https://github.com/revanthpobala/devin-cli/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devin_cli"]
